prevent horizontal scrolling on mobile

--- a/app/assets/stylesheets/_slopes.scss
+++ b/app/assets/stylesheets/_slopes.scss
@@ -7,7 +7,7 @@
   height: 250px;
   left: 0;
   position: absolute;
-  width: 100%;
+  right: 0; // Specifying right 0 (as opposed to width: 100%) prevents horizontal scrolling on mobile
 }
 
 %downward-slope {
